@@ -1,6 +1,5 @@
 -Xms4g -Xmx8g
 -XX:+UseZGC
--XX:+ZGenerational
 -XX:+UseCompactObjectHeaders
 -XX:+UseStringDeduplication
 -XX:MetaspaceSize=256m
@@ -11,11 +10,6 @@
 -Djava.util.concurrent.ForkJoinPool.common.parallelism=15
 -Djdk.virtualThreadScheduler.parallelism=16
 -Djdk.tracePinnedThreads=short
--Dhttp.proxyHost=127.0.0.1
--Dhttp.proxyPort=3128
--Dhttps.proxyHost=127.0.0.1
--Dhttps.proxyPort=3128
--Dhttp.nonProxyHosts=localhost|127.0.0.1|169.254.169.254|metadata.google.internal|*.svc.cluster.local|*.local|*.googleapis.com|*.google.com
 -Dfile.encoding=UTF-8
 --enable-preview
 -Dmaven.build.cache.enabled=true
